--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "author": "roseline124",
   "license": "MIT",
   "dependencies": {
-    "koa": "^2.13.0"
+    "koa": "^2.13.0",
+    "koa-send": "^5.0.1",
+    "koa-static": "^5.0.0"
   }
 }
