--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "koa": "^2.13.0",
+    "koa-router": "^9.1.0",
     "koa-send": "^5.0.1",
     "koa-static": "^5.0.0"
   }
