--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "repository": "https://github.com/roseline124/PWA-study",
   "author": "roseline124",
   "license": "MIT",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "koa": "^2.13.0",
     "koa-router": "^9.1.0",
