--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,15 @@
 {
   "short_name": "PWA",
   "name": "PWA Study",
+  "icons": [{
+    "src": "/images/icons-192.png",
+    "type": "image/png",
+    "sizes": "192x192"
+  }, {
+    "src": "/images/icons-512.png",
+    "type": "image/png",
+    "sizes": "512x512"
+  }],
   "start_url": "/",
   "background_color": "#fff",
   "display": "standalone",
