--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,5 +5,17 @@
   "background_color": "#fff",
   "display": "standalone",
   "scope": "/",
-  "theme_color": "#3740ff"
+  "theme_color": "#3740ff",
+  "icons": [
+    {
+      "src": "/images/icons-192.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    },
+    {
+      "src": "/images/icons-512.png",
+      "type": "image/png",
+      "sizes": "512x512"
+    }
+  ]
 }
